# debate-engine

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  api_server.py  demo.html  demo.py  docker-compose.yml  generate_version.py  index.html  pyproject.toml  render.yaml  test_config_fix.py  test_litellm.py  test_litellm_nvidia.py  test_nvidia_direct.py  test_nvidia_fix.py  test_readme_example.py  test_real_nvidia.py  test_timeout.py
.github/workflows/: DebateEngine_v5.0_Complete.md  DebateEngine_v5.0_ProjectPlan.md  DebateEngine_v6.0_ProjectPlan.md  README.md  ci.yml  debate-review.yml  deploy-api.yml  deploy-demo.yml
.trae/documents/: ci_code_style_fix_plan.md  comparison_analysis.md  debate_engine_analysis.md  debate_engine_improvement_plan.md  debate_engine_interview_presentation_plan.md  deploy_fix_plan.md  e501_fix_plan.md  mypy_error_fix_plan.md  performance_analysis.md  project_analysis_and_comparison_plan.md  project_analysis_report.md
.trae/specs/api_bug_fix/: checklist.md  spec.md  tasks.md
.trae/specs/backend_api_fix/: checklist.md  spec.md  tasks.md
.trae/specs/ci_fix/: checklist.md  spec.md  tasks.md
.trae/specs/ci_fix_round3/: checklist.md  spec.md  tasks.md
.trae/specs/code_style_fix/: checklist.md  spec.md  (+1 more)
debate-engine/: README.md  pyproject.toml  redefined_project_positioning.md
debate-engine/tests/: test_api.py  test_core.py
demo/: README.md  index.html
docs/: PROJECT_PLAN.md
src/debate_engine/: __init__.py  __main__.py  cli.py
tests/: test_api.py  test_cli.py  test_eval.py  test_mcp.py  test_orchestration.py  test_provider.py  test_schemas.py
(+81 files in other folders)
