[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "debate-engine"
version = "0.2.0"
description = "Structured Multi-Agent Critique & Consensus Engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{name = "Tony Ye", email = "tony@debate-engine.dev"}]
keywords = ["multi-agent", "debate", "critique", "consensus", "llm", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.5.0",
    "litellm>=1.40.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]
eval = [
    "sentence-transformers>=3.0.0",
    "ragas>=0.2.0",
]
mcp = [
    "mcp[cli]>=1.0.0",
]
all = ["debate-engine[dev,eval,mcp]"]

[project.scripts]
debate-engine = "debate_engine.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/debate_engine"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true